# Siedle_SG_650-0

./: README.md
OSELAS.Toolchain-2014.12.2/: fixup_ptxconfigs.sh
OSELAS.Toolchain-2014.12.2/patches/glibc-2.20/: 0007-CVE-2015-7547-getaddrinfo-stack-based-buffer-overflo.patch  series
OSELAS.Toolchain-2014.12.2/ptxconfigs/: aarch64-v8a-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-1136jfs-linux-gnueabi_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-1136jfs-linux-gnueabihf_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-cortexa8-linux-gnueabi_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-cortexa8-linux-gnueabihf_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-cortexm3-uclinuxeabi_gcc-4.9.2_uclibc-0.9.33.2_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-v4t-linux-gnueabi_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-v5te-linux-gnueabi_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-v7a-linux-gnueabi_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  arm-v7a-linux-gnueabihf_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  i586-unknown-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  i686-atom-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  mipsel-softfloat-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  powerpc-603e-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig  x86_64-unknown-linux-gnu_gcc-4.9.2_glibc-2.20_binutils-2.24_kernel-3.16-sanitized.ptxconfig
OSELAS.Toolchain-2014.12.2/ptxconfigs/avr/: avr_gcc-4.3.2_libc-1.6.2_binutils-2.19.1a.ptxconfig  avr_gcc-4.4.3_libc-1.7.1_binutils-2.20.1a.ptxconfig
OSELAS.Toolchain-2014.12.2/ptxconfigs/newlib/: arm-cortexm3-eabi_gcc-4.9.2_newlib-2.1.0_binutils-2.24.ptxconfig  arm-cortexm4-eabihf_gcc-4.9.2_newlib-2.1.0_binutils-2.24.ptxconfig
foss_sg_1.4.0/kernel_and_rootfs_2.2.2_103/: comments
foss_sg_1.4.0/kernel_and_rootfs_2.2.2_103/file-stack/: Makefile  README  file-stack.c
foss_sg_1.4.0/kernel_and_rootfs_2.2.2_103/kmsfbwrap-11/: Makefile.am  Makefile.in  NEWS  config.h.in  configure  configure.ac
foss_sg_1.4.0/kernel_and_rootfs_2.2.2_103/kmsfbwrap-11/src/: bgi.c  drm_fourcc_rgb_a.h  kmsfb-manage.c  kmsfb.h  png.c
foss_sg_1.4.0/kernel_and_rootfs_2.2.2_103/openocd-0.9.0-dev/: ChangeLog  Makefile.in  aclocal.m4  configure
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/: Makefile  barebox.config
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/commands/: Kconfig  Makefile  bootmode.c  state.c  ubiformat.c
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/common/: Kconfig  Makefile  bootmode.c  imd-barebox.c  state.c
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/images/: Makefile.imx
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/include/: bootmode.h  notifier.h  param.h  state.h
foss_sg_1.4.0/smx-barebox-2014.09.0@e39da030629/lib/: notifier.c
(+732 files in other folders)
